delivery-together-card-api/kubernetes/stage/k8s-deployments.yaml
###################################
# delivery-together-route-api
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-together-card-api
  labels:
    app: delivery-together-card-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: delivery-together-card-api
  template:
    metadata:
      labels:
        app: delivery-together-card-api
    spec:
      containers:
        - name: delivery-together-card-api
          image: us-central1-docker.pkg.dev/esoteric-realm-415003/delivery-together-repository/delivery-together-card-api:1.0.3
          resources:
            requests:
              memory: "500Mi"
              cpu: "250m"
            limits:
              memory: "1000Mi"
              cpu: "500m"
          ports:
            - containerPort: 3007
          imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: delivery-together-card-service
  annotations:
    cloud.google.com/backend-config: '{"default": "delivery-together-card-config"}'
spec:
  type: NodePort
  selector:
    app: delivery-together-card-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3007
      nodePort: 31007
